# DiscordConsole

./: .commands.go.swp  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  CrossCompile.sh  LICENSE  LUA.md  Makefile  README.md  TODO.txt  api.go  bookmarks.go  command.go  commands.go  commands_navigate.go  commands_query.go  commands_roles.go  commands_say.go  commands_usermod.go  completer.go  emojify.go  errorfilter.go  events.go  filepaths.go  help.go  intercept.go  justfile  languages.go  location.go  lua.go  main.go  main_!windows.go  main_darwin.go  main_linux.go  main_test.go  main_windows.go  msgutil.go  music.go  (+5 more)
PermCalc/: README.md  data.go  logic.go  permcalc.go  permcalc_test.go
src/: color.rs  command.rs  escape.rs  help.rs  main.rs  options.rs  parser.rs  raw.rs  sort.rs  tokenizer.rs  tui.rs
wiki/: API.md  Commands.md  LUA.md  Selfbot.md  Translations.md  autorun.md
