[package]
name        = "discord_console"
description = "DiscordConsole is a software aiming to give you full control over accounts, bots and webhooks!"
license     = "GPL-3.0+"

version = "0.1.0"
authors = ["LEGOlord208 <LEGOlord208@krake.one>"]


[dependencies]
clap        = "2.24"
clipboard   = "0.3"
cursive     = "0.5"
discord     = { git = "https://github.com/SpaceManiac/discord-rs" }
hlua        = { git = "https://github.com/tomaka/hlua" }
lazy_static = "0.2"
rustyline   = "1.0"
serde_json  = "1.0"
