[package]
authors = ["Mnpn <mnpn03@gmail.com>"]
description = "DiscordConsole is a software aiming to give you full control over accounts, bots and webhooks!"
license = "GPL-3.0+"
name = "discord_console"
version = "0.1.0"
[dependencies]
clap = "2.30.0"
clipboard = "0.4.6"
lazy_static = "1.0.0"
rlua = "0.13.0"
rustyline = "1.0.0"
serde_json = "1.0.10"

[dependencies.discord]
default-features = false
git = "https://github.com/SpaceManiac/discord-rs"
